ecmascript/parser/tests/test262-error-references/fail/37cb7557997d4fd6.js.stderr
error: Destructuring bindings require initializers
 --> $DIR/tests/test262-parser/fail/37cb7557997d4fd6.js:1:24
  |
1 | "use strict"; for (let [a = let];;) {}
  |                        ^^^^^^^^^

error: 'implements', 'interface', 'let', 'package', 'private', 'protected',  'public', 'static', or 'yield' cannot be used as an identifier in strict mode
 --> $DIR/tests/test262-parser/fail/37cb7557997d4fd6.js:1:29
  |
1 | "use strict"; for (let [a = let];;) {}
  |                             ^^^

